--- a/styles/style.css
+++ b/styles/style.css
@@ -11,27 +11,7 @@
 .container{
   max-width: 1300px;
   margin: 0 auto;
-}
-
-.btn{
-  border: none;
-  outline: none;
-  cursor: pointer;
-  padding: 12px 30px;
-  font-size: 18px;
-  font-weight: 600;
-  color: #fff;
-  border-radius: 40px;
-  background: linear-gradient(90deg, #ff3cac, #784ba0, #2b86c5);
-  box-shadow: 0 0 20px rgba(255, 60, 172, 0.6);
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  transition: 0.3s ease;
-}
-.btn:hover{
-  transform: translateY(-2px);
-  box-shadow: 0 0 30px rgba(255, 60, 172, 0.9);
+  padding: 16px;
 }
 
 .section-title{
@@ -45,7 +25,7 @@
 
 
 
-
+/* */
 .humburger{
   display: none;
 }
